This will not work. There is some Issue beatween SignalR and angular Routing

--- a/WithAngularAndAsp5/src/WithAngularAndAsp5/bower.json
+++ b/WithAngularAndAsp5/src/WithAngularAndAsp5/bower.json
@@ -3,6 +3,7 @@
 	"private": true,
   "dependencies": {
     "signalr": "2.2.0",
-    "angular": "1.4.7"
+    "angular": "1.4.7",
+    "angular-route": "1.4.7"
   }
 }
