--- a/WithAngularAndAsp5/src/WithAngularAndAsp5/bower.json
+++ b/WithAngularAndAsp5/src/WithAngularAndAsp5/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "signalr": "2.2.0",
     "angular": "1.4.7",
-    "angular-route": "1.4.7"
+    "angular-route": "1.4.7",
+    "angular-signalr-hub": "1.5.0"
   }
 }
